--- a/my_app/android/app/build.gradle
+++ b/my_app/android/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id "com.android.application"
+    // START: FlutterFire Configuration
+    id 'com.google.gms.google-services'
+    // END: FlutterFire Configuration
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -45,7 +48,7 @@ android {
         applicationId "com.example.my_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -64,4 +67,18 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    // Exclude old versions if needed
+    configurations.all {
+        resolutionStrategy.eachDependency {
+            if (it.requested.group == 'org.jetbrains.kotlin') {
+                it.useVersion "$kotlin_version"
+            }
+        }
+    }
+
+
+    // Your other dependencies go here
+}
