--- a/my_app/android/build.gradle
+++ b/my_app/android/build.gradle
@@ -1,3 +1,19 @@
+
+buildscript {
+    ext.kotlin_version = '1.8.22' // or whatever the highest one is in your error
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // other classpaths
+    }
+}
+
+
 allprojects {
     repositories {
         google()
