--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -32,12 +32,14 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.0
   formz: ^0.4.0
+  carousel_slider: ^4.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
+  firebase_core: ^3.4.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +65,8 @@ flutter:
 
   assets:
     - lib/assets/logo.svg
+    - lib/assets/IslamicProduct.jpg
+    - lib/assets/lamp_product_img.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
