--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_bloc: ^8.1.0
   formz: ^0.4.0
   carousel_slider: ^4.2.1
+  readmore: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -67,6 +68,7 @@ flutter:
     - lib/assets/logo.svg
     - lib/assets/IslamicProduct.jpg
     - lib/assets/lamp_product_img.jpg
+    - lib/assets/cleanerProject.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
