--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   formz: ^0.4.0
   carousel_slider: ^4.2.1
   readmore: ^3.0.0
+  google_fonts: ^6.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
