--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
   firebase_core: ^3.4.0
+  http: ^1.2.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
