--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   carousel_slider: ^4.2.1
   readmore: ^3.0.0
   google_fonts: ^6.2.1
+  local_auth: ^2.1.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -44,6 +46,7 @@ dependencies:
   firebase_core: ^3.4.0
   http: ^1.2.2
   equatable: ^2.0.5
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
